Fixed bug where overlap occurs when user opens drawer and scrolls back up

--- a/src/components/Drawer/Drawer.css
+++ b/src/components/Drawer/Drawer.css
@@ -30,15 +30,19 @@
   height: 100vh;
   color: rgb(212, 212, 212);
   top: 0%;
-  position: fixed;
   transition: all 0.2s cubic-bezier(0.7, 0.71, 0.01, 1);
   -webkit-transition: all 0.2s cubic-bezier(0.7, 0.71, 0.01, 1);
   -moz-transition: all 0.2s cubic-bezier(0.7, 0.71, 0.01, 1);
   z-index: 10;
   background: #b33d64;
+  position: -webkit-sticky;
+  position: sticky;
 }
 .drawerRightSidePanel.isOpen {
   transform: translateX(0vw);
+}
+.drawerRightSidePanel.showButton {
+  position: fixed;
 }
 
 .drawerContents {
